<resources>
    <string name="app_name">Pawpins</string>
    <string name="name">Pawpins</string>
    <string name="email_hint">Enter Email</string>
    <string name="pass_string">Enter Password</string>
    <string name="login">Login</string>
    <string name="no_acct">Don\'t have an account? Sign up!</string>
    <string name="logo">logo</string>
    <string name="register_me">Register Me!</string>
    <string name="have_acct">Already have an account? Login!</string>
    <string name="update_me">UPDATE ME!</string>

</resources>