<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/snow">

    <ImageView
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:id="@+id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="15dp"
        android:background="@color/orange"
        android:contentDescription="@string/logo">
    </ImageView>

    <EditText
        style="@style/LoginBox"
        android:layout_height="wrap_content"
        android:id="@+id/email"
        android:layout_below="@id/logo"
        android:hint="@string/email_hint"
        android:autofillHints="Email"
        android:inputType="textEmailAddress">
    </EditText>

    <EditText
        style="@style/LoginBox"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:layout_below="@id/email"
        android:hint="@string/pass_string"
        android:autofillHints="Password"
        android:inputType="textPassword">
    </EditText>

    <Button
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:id="@+id/login_button"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/login"
        android:textSize="20sp"
        android:padding="10dp"
        android:background="@drawable/rounded_corners">
    </Button>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:id="@+id/sign_up_button"
        android:layout_below="@id/login_button"
        android:layout_centerHorizontal="true"
        android:text="@string/no_acct"
        android:textAllCaps="false"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        >
    </Button>


</RelativeLayout>